# bottlerocket-core-kit

./: BUILDING.md  CHANGELOG.md  COPYRIGHT  Cargo.toml  Makefile  README.md  Twoliter.toml
.github/ISSUE_TEMPLATE/: package.md
.github/workflows/: build.yml  cache.yml
advisories/2.1.0/: BRSA-1j0O73qa.toml  BRSA-1j0o73qa.toml  BRSA-2X8oBVtK.toml  BRSA-2taSniVu.toml  BRSA-2tasnivu.toml  BRSA-2x8obvtk.toml  BRSA-3RXpHDbV.toml  BRSA-3rxphdbv.toml  BRSA-7F63qbV5.toml  BRSA-7f63qbv5.toml  BRSA-AiKMzvXP.toml  BRSA-ApS0I7KH.toml  BRSA-FcOLMXto.toml  BRSA-JEjLmMhe.toml  BRSA-NTlUp9yT.toml  BRSA-Ng5niBKY.toml  BRSA-R5POWgHb.toml  BRSA-UqiyGQ33.toml  BRSA-V2KgIWsA.toml  BRSA-YSGwwZOA.toml  BRSA-Yu6lSGjn.toml  BRSA-aikmzvxp.toml  BRSA-aps0i7kh.toml  BRSA-dckChIkE.toml  BRSA-dckchike.toml  BRSA-fcolmxto.toml  BRSA-jejlmmhe.toml  BRSA-kYsAwMJt.toml  BRSA-kysawmjt.toml  BRSA-ng5nibky.toml  BRSA-ntlup9yt.toml  BRSA-pyetDFgd.toml  BRSA-pyetdfgd.toml  BRSA-r5powghb.toml  BRSA-uqiygq33.toml  (+9 more)
kits/bottlerocket-core-kit/: Cargo.toml
sources/: Cargo.toml  clarify.toml  deny.toml
sources/api/: openapi.yaml
sources/api/apiclient/: Cargo.toml
sources/api/apiclient/src/: ephemeral_storage.rs  lib.rs  main.rs
sources/api/apiserver/: Cargo.toml
sources/api/apiserver/src/server/: controller.rs  ephemeral_storage.rs  error.rs  mod.rs
sources/api/apiserver/src/server/exec/: child.rs
sources/api/bootstrap-containers/: Cargo.toml  README.md
sources/api/bootstrap-containers/src/: main.rs
sources/api/bork/: Cargo.toml
sources/api/bork/src/: main.rs
sources/api/certdog/: Cargo.toml
sources/api/certdog/src/: main.rs
sources/api/corndog/: Cargo.toml  README.md
sources/api/corndog/src/: main.rs
sources/api/datastore/src/serialization/: pairs.rs
sources/api/ecs-settings-applier/: Cargo.toml
sources/api/host-containers/: Cargo.toml
sources/api/host-containers/src/: config.rs  main.rs
sources/api/migration/migrator/: Cargo.toml
sources/api/migration/migrator/src/: test.rs
sources/api/pluto/: Cargo.toml
sources/api/pluto/src/: api.rs  aws.rs  ec2.rs  eks.rs  main.rs  proxy.rs
sources/api/prairiedog/: Cargo.toml
sources/api/prairiedog/src/: bootconfig.rs  error.rs  initrd.rs
sources/api/schnauzer/: Cargo.toml
sources/api/schnauzer/src/: helpers.rs  v1.rs
sources/api/schnauzer/src/helpers/: mod.rs
sources/api/schnauzer/src/helpers/stdlib/: mod.rs  reflective.rs
sources/api/schnauzer/src/v2/import/: helpers.rs
sources/api/schnauzer/tests/: v2_render_templates.rs
sources/api/schnauzer/tests/templates/succeeds/: 08_ipcidr.template
sources/api/schnauzer/tests/templates/succeeds_rendered/: 08_ipcidr.rendered
sources/api/settings-committer/: Cargo.toml
sources/api/shibaken/: Cargo.toml
sources/api/shibaken/src/: error.rs  main.rs
sources/api/shibaken/src/warmpool/: error.rs
sources/api/simple-settings-plugin/: Cargo.toml
sources/api/simple-settings-plugin/src/: lib.rs
sources/api/storewolf/: Cargo.toml
sources/api/storewolf/src/: main.rs
sources/api/sundog/: Cargo.toml
sources/api/sundog/src/: main.rs
sources/api/thar-be-settings/: Cargo.toml
sources/api/thar-be-updates/: Cargo.toml
sources/api/thar-be-updates/src/: status.rs
sources/aws-smithy-experimental/: Cargo.toml  README.md
sources/aws-smithy-experimental/src/: hyper_1_0.rs
sources/bloodhound/: Cargo.toml
sources/bloodhound/src/: results.rs
sources/bootstrap-commands/: Cargo.toml  README.md
sources/bootstrap-commands/src/: main.rs
sources/bottlerocket-variant/: Cargo.toml
sources/cfsignal/: Cargo.toml
sources/cfsignal/src/: cloudformation.rs
sources/dogtag/: Cargo.toml
sources/driverdog/: Cargo.toml  README.md
sources/driverdog/src/: main.rs
sources/driverdog/src/tests/: copying.conf  linking.conf
sources/driverdog/src/tests/invalid/: missing-object-files.conf  missing-object-source.conf
sources/early-boot-config/early-boot-config/: Cargo.toml
sources/early-boot-config/early-boot-config-provider/: Cargo.toml
sources/early-boot-config/early-boot-config/src/: main.rs
sources/early-boot-config/user-data-providers/ec2-identity-doc/: Cargo.toml
sources/early-boot-config/user-data-providers/ec2-imds/: Cargo.toml
sources/early-boot-config/user-data-providers/local-defaults/: Cargo.toml
sources/early-boot-config/user-data-providers/local-file/: Cargo.toml
sources/early-boot-config/user-data-providers/local-overrides/: Cargo.toml
sources/early-boot-config/user-data-providers/vmware-cd-rom/: Cargo.toml
sources/early-boot-config/user-data-providers/vmware-guestinfo/: Cargo.toml
sources/ghostdog/: Cargo.toml  README.md
sources/ghostdog/src/: main.rs
sources/ghostdog/src/tests/: open-gpu-supported-devices-test.json
sources/host-ctr/: go.mod  go.sum
sources/host-ctr/cmd/host-ctr/: main.go  main_test.go  registry.go
sources/imdsclient/: Cargo.toml
sources/imdsclient/src/: lib.rs
sources/logdog/: Cargo.toml  README.md
sources/logdog/src/: create_tarball.rs  log_request.rs  main.rs
sources/metricdog/: Cargo.toml
sources/metricdog/src/: config.rs  main.rs  systemd.rs
sources/models/: Cargo.toml
sources/models/src/: ephemeral_storage.rs  lib.rs
sources/netdog/: Cargo.toml
sources/netdog/src/: dns.rs  interface_id.rs  networkd_status.rs
sources/netdog/src/cli/: mod.rs  write_resolv_conf.rs
sources/netdog/systemd-derive/: Cargo.toml
sources/nvidia-migmanager/: Cargo.toml  README.md
sources/nvidia-migmanager/src/: main.rs
sources/parse-datetime/: Cargo.toml
sources/pciclient/: Cargo.toml  README.md
sources/pciclient/src/: lib.rs  private.rs
sources/shimpei/: Cargo.toml
sources/static-pods/: Cargo.toml
sources/static-pods/src/: main.rs
sources/updater/block-party/: Cargo.toml
sources/updater/signpost/: Cargo.toml
sources/updater/signpost/src/: error.rs  gptprio.rs  main.rs  state.rs
sources/updater/update_metadata/: Cargo.toml
sources/updater/updog/: Cargo.toml
sources/updater/updog/src/: error.rs  lib.rs  main.rs
sources/xfscli/: Cargo.toml
tools/: collect-kernel-config  diff-kernel-config
(+145 files in other folders)
