[workspace]
resolver = "1"
members = [
    "api/apiserver",
    "api/apiclient",
    "api/bootstrap-containers",
    "api/bork",
    "api/certdog",
    "api/corndog",
    "api/datastore",
    "api/sundog",
    "api/schnauzer",
    "api/pluto",
    "api/host-containers",
    "api/storewolf",
    "api/thar-be-settings",
    "api/thar-be-updates",
    "api/settings-committer",
    "api/migration/migrator",
    "api/shibaken",
    "api/prairiedog",
    "api/simple-settings-plugin",

    "bloodhound",

    "bottlerocket-release",

    "bottlerocket-variant",

    "imdsclient",

    "dogtag",

    "driverdog",

    "early-boot-config/early-boot-config",
    "early-boot-config/early-boot-config-provider",

    "early-boot-config/user-data-providers/ec2-identity-doc",
    "early-boot-config/user-data-providers/ec2-imds",
    "early-boot-config/user-data-providers/local-defaults",
    "early-boot-config/user-data-providers/local-file",
    "early-boot-config/user-data-providers/local-overrides",
    "early-boot-config/user-data-providers/vmware-cd-rom",
    "early-boot-config/user-data-providers/vmware-guestinfo",

    "generate-readme",

    "ghostdog",

    "metricdog",

    "netdog",

    "cfsignal",

    "logdog",

    "models",

    "static-pods",

    "parse-datetime",

    "retry-read",

    "updater/block-party",
    "updater/signpost",
    "updater/update_metadata",
    "updater/updog",

    "constants",

    "shimpei",

    "xfscli",
]

[profile.release]
debug = true
