[workspace]
resolver = "1"
members = [
    "api/apiserver",
    "api/apiclient",
    "api/bootstrap-containers",
    "api/bork",
    "api/certdog",
    "api/corndog",
    "api/datastore",
    "api/sundog",
    "api/schnauzer",
    "api/pluto",
    "api/host-containers",
    "api/storewolf",
    "api/thar-be-settings",
    "api/thar-be-updates",
    "api/settings-committer",
    "api/migration/migrator",
    "api/shibaken",
    "api/prairiedog",
    "api/simple-settings-plugin",

    "bloodhound",

    "bootstrap-commands",

    "bottlerocket-release",

    "bottlerocket-variant",

    "imdsclient",

    "dogtag",

    "driverdog",

    "early-boot-config/early-boot-config",
    "early-boot-config/early-boot-config-provider",

    "early-boot-config/user-data-providers/ec2-identity-doc",
    "early-boot-config/user-data-providers/ec2-imds",
    "early-boot-config/user-data-providers/local-defaults",
    "early-boot-config/user-data-providers/local-file",
    "early-boot-config/user-data-providers/local-overrides",
    "early-boot-config/user-data-providers/vmware-cd-rom",
    "early-boot-config/user-data-providers/vmware-guestinfo",

    "generate-readme",

    "ghostdog",

    "metricdog",

    "netdog",

    "cfsignal",

    "logdog",

    "models",

    "static-pods",

    "parse-datetime",

    "pciclient",

    "retry-read",

    "updater/block-party",
    "updater/signpost",
    "updater/update_metadata",
    "updater/updog",

    "constants",

    "shimpei",

    "xfscli",
]

[workspace.dependencies]
apiclient = { version = "0.1", path = "api/apiclient" }
block-party = { version = "0.1", path = "updater/block-party" }
bottlerocket-release = { version = "0.1", path = "bottlerocket-release" }
constants = { version = "0.1", path = "constants" }
datastore = { version = "0.1", path = "api/datastore" }
dogtag = { version = "0.1", path = "dogtag" }
early-boot-config-provider = { version = "0.1", path = "early-boot-config/early-boot-config-provider" }
generate-readme = { version = "0.1", path = "generate-readme" }
imdsclient = { version = "0.1", path = "imdsclient" }
models = { version = "0.1", path = "models" }
parse-datetime = { version = "0.1", path = "parse-datetime" }
pciclient = { version = "0.1", path = "pciclient" }
retry-read = { version = "0.1", path = "retry-read" }
signpost = { version = "0.1", path = "updater/signpost" }
storewolf = { version = "0.1", path = "api/storewolf" }
simple-settings-plugin = { version = "0.1", path = "api/simple-settings-plugin" }
systemd-derive = { version = "0.1", path = "netdog/systemd-derive" }
thar-be-updates = { version = "0.1", path = "api/thar-be-updates" }
update_metadata = { version = "0.1", path = "updater/update_metadata" }
schnauzer = { version = "0.1", path = "api/schnauzer" }

abi_stable = "0.11.3"
actix = { version = "0.13", default-features = false }
actix-rt = "2"
actix-web = { version = "4", default-features = false }
actix-web-actors = { version = "4", default-features = false }
argh = "0.1"
async-trait = "0.1"
aws-config = "1"
aws-lc-rs = "1"
aws-sdk-cloudformation = "1"
aws-sdk-ec2 = "1"
aws-sdk-eks = "1"
aws-smithy-runtime = "1"
aws-smithy-types = "1"
aws-smithy-experimental = "0.1"
aws-types = "1"
bit_field = "0.10"
bon = "2"
bytes = "1"
cached = "0.49"
cargo-readme = "3"
chrono = { version = "0.4", default-features = false }
cidr = "0.2"
darling = { version = "0.20", default-features = false }
derive-getters = "0.5"
dns-lookup = "2"
env_logger = "0.11"
envy = "0.4"
flate2 = { version = "1", default-features = false }
fs2 = "0.4"
futures = { version = "0.3", default-features = false }
futures-channel = { version = "0.3", default-features = false }
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
glob = "0.3"
gptman = { version = "1", default-features = false }
handlebars = "4"
headers = "0.3"
hex-literal = "0.4"
http = "0.2"
httparse = "1"
httptest = "0.15"
hyper = { version = "0.14", default-features = false }
hyper-rustls = { version = "0.24", default-features = false }
hyper-unix-connector = "0.2"
indexmap = "2"
ipnet = "2"
itertools = "0.13"
lazy_static = "1"
libc = "0.2"
log = "0.4.21"
lz4 = "1"
maplit = "1.0"
nix = "0.26"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
num_cpus = "1"
pentacle = "1"
percent-encoding = "2"
pest = "2.5"
pest_derive = "2.5"
proc-macro2 = "1"
quick-xml = "0.26"
quote = "1"
rand = { version = "0.8", default-features = false }
regex = "1"
reqwest = { version = "0.12", default-features = false }
rustls = "0.23"
semver = "1"
serde = "1"
serde-xml-rs = "0.6"
serde_json = "1"
serde_plain = "1"
serde_yaml = "0.9"
shell-words = "1"
shlex = "1"
signal-hook = "0.3"
simplelog = "0.12"
snafu = "0.8"
syn = { version = "2", default-features = false }
tar = { version = "0.4", default-features = false }
tempfile = "3"
test-case = "3"
tokio = { version = "~1.32", default-features = false }  # LTS
tokio-retry = "0.3"
tokio-rustls = "0.24"
tokio-test = "0.4"
tokio-tungstenite = { version = "0.20", default-features = false }
tokio-util = "0.7"
toml = "0.8"
tough = "0.19"
unindent = "0.2"
url = "2"
walkdir = "2.4"
x509-parser = "0.16"
base64 = "0.22"

[workspace.dependencies.bottlerocket-modeled-types]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-models-v0.6.0"
version = "0.6.0"

[workspace.dependencies.bottlerocket-settings-models]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-models-v0.6.0"
version = "0.6.0"

[workspace.dependencies.bottlerocket-settings-plugin]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-plugin-v0.1.0"
version = "0.1.0"

[workspace.dependencies.settings-extension-oci-defaults]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-models-v0.6.0"
version = "0.1.0"

[profile.release]
debug = true
