[package]
name = "cfsignal"
version = "0.1.0"
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
log.workspace = true
serde = { workspace = true, features = ["derive"] }
simplelog.workspace = true
snafu.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
aws-config.workspace = true
aws-sdk-cloudformation.workspace = true
aws-types.workspace = true
imdsclient.workspace = true

[build-dependencies]
generate-readme.workspace = true
