[package]
name = "dogtag"
version = "0.1.0"
authors = ["Jarrett Tierney <jmt@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
exclude = ["README.md"]

[[bin]]
name = "20-imds"
path = "bin/imds.rs"

[[bin]]
name = "10-reverse-dns"
path = "bin/reverse.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
fips = ["imdsclient/fips"]

[dependencies]
argh.workspace = true
dns-lookup.workspace = true
imdsclient.workspace = true
log.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["default", "macros"] }
tokio-retry.workspace = true
walkdir.workspace = true

[build-dependencies]
generate-readme.workspace = true
