[package]
name = "ghostdog"
version = "0.1.0"
authors = ["Ben Cressey <bcressey@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
argh.workspace = true
gptman.workspace = true
hex-literal.workspace = true
lazy_static.workspace = true
signpost.workspace = true
snafu.workspace = true

[build-dependencies]
generate-readme.workspace = true
