[package]
name = "logdog"
version = "0.1.0"
authors = ["Matt Briggs <brigmatt@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
flate2 = { workspace = true, features = ["default"] }
glob.workspace = true
reqwest = { workspace = true, features = ["blocking", "rustls-tls-native-roots"] }
serde_json.workspace = true
shell-words.workspace = true
snafu = { workspace = true, features = ["backtraces-impl-backtrace-crate"] }
tar.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
url.workspace = true
walkdir.workspace = true

[build-dependencies]
generate-readme.workspace = true
