[package]
name = "metricdog"
version = "0.1.0"
authors = ["Matt Briggs <brigmatt@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[features]
fips = ["rustls/fips", "aws-lc-rs/fips"]

[dependencies]
argh.workspace = true
aws-lc-rs = { workspace = true, features = ["bindgen"] }
bottlerocket-release.workspace = true
log.workspace = true
reqwest = { workspace = true, features = ["blocking", "rustls-tls-native-roots"] }
rustls.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
simplelog.workspace = true
snafu.workspace = true
toml.workspace = true
url.workspace = true

[build-dependencies]
generate-readme.workspace = true

[dev-dependencies]
httptest.workspace = true
tempfile.workspace = true
