[package]
name = "netdog"
version = "0.1.0"
authors = ["Ben Cressey <bcressey@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[features]
default = []
wicked = []

[dependencies]
argh.workspace = true
dogtag.workspace = true
ipnet = { workspace = true, features = ["serde"] }
indexmap = { workspace = true, features = ["serde"] }
envy.workspace = true
lazy_static.workspace = true
systemd-derive.workspace = true
quick-xml = { workspace = true, features = ["serialize"] }
rand = { workspace = true, features = ["std", "std_rng"] }
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_plain.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
toml = { workspace = true, features = ["preserve_order"] }

[dev-dependencies]
tempfile.workspace = true
handlebars.workspace = true

[build-dependencies]
generate-readme.workspace = true
