[package]
name = "static-pods"
version = "0.1.0"
authors = ["Erikson Tung <etung@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
build = "build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
base64.workspace = true
log.workspace = true
serde = { workspace = true, features = ["default"] }
simplelog.workspace = true
snafu.workspace = true
toml.workspace = true
tempfile.workspace = true
bottlerocket-modeled-types.workspace = true

[build-dependencies]
generate-readme.workspace = true
