[package]
name = "xfscli"
version = "0.1.0"
authors = ["Shikha Vyaghra <vyaghras@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false

[[bin]]
name = "xfs_info"

[[bin]]
name = "xfs_admin"

[[bin]]
name = "fsck_xfs"
path = "src/bin/fsck_xfs/main.rs"

[dependencies]
argh.workspace = true
tempfile.workspace = true
snafu.workspace = true
