[package]
name = "apiclient"
version = "0.1.0"
authors = ["Tom Kirchner <tjk@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
build = "build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[features]
default = ["tls"]
tls = ["dep:rustls", "dep:aws-lc-rs", "reqwest/rustls-tls-native-roots"]
fips = ["tls", "aws-lc-rs/fips", "rustls/fips"]

[dependencies]
aws-lc-rs = { workspace = true, optional = true, features = ["bindgen"] }
base64.workspace = true
constants.workspace = true
datastore.workspace = true
futures.workspace = true
futures-channel.workspace = true
http.workspace = true
httparse.workspace = true
hyper = { workspace = true, features = ["client", "http1", "http2", "tcp"] }
hyper-unix-connector.workspace = true
libc.workspace = true
log.workspace = true
models.workspace = true
nix.workspace = true
rand = { workspace = true, features = ["default"] }
reqwest.workspace = true
retry-read.workspace = true
rustls = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
signal-hook.workspace = true
simplelog.workspace = true
snafu = { workspace = true, features = ["futures"] }
tokio = { workspace = true, features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { workspace = true, features = ["connect"] }
toml.workspace = true
unindent.workspace = true
url.workspace = true

[build-dependencies]
generate-readme.workspace = true
