[package]
name = "apiserver"
version = "0.1.0"
authors = ["Tom Kirchner <tjk@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
build = "build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
actix = { workspace = true, features = ["macros"] }
actix-rt.workspace = true
actix-web.workspace = true
actix-web-actors.workspace = true
bytes.workspace = true
bottlerocket-release.workspace = true
datastore.workspace = true
fs2.workspace = true
http.workspace = true
libc.workspace = true
log.workspace = true
models.workspace = true
nix.workspace = true
num.workspace = true
rand = { workspace = true, features = ["default"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
simplelog.workspace = true
snafu.workspace = true
thar-be-updates.workspace = true
tokio = { workspace = true, features = ["process"] }

[build-dependencies]
generate-readme.workspace = true

[dev-dependencies]
maplit.workspace = true
toml.workspace = true
simple-settings-plugin.workspace = true
