[package]
name = "bork"
version = "0.1.0"
authors = ["Samuel Mendoza-Jonas <samjonas@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
rand = { workspace = true, features = ["default"] }
serde_json.workspace = true
settings-extension-updates.workspace = true
