[package]
name = "host-containers"
version = "0.1.0"
authors = ["Tom Kirchner <tjk@amazon.com>", "Zac Mrowicki <mrowicki@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
build = "build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
base64 = "0.21"
constants = { path = "../../constants", version = "0.1" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
simplelog = "0.12"
snafu = "0.8"
toml = "0.8"

[dependencies.bottlerocket-modeled-types]
git = "https://github.com/bottlerocket-os/bottlerocket-settings-sdk"
tag = "bottlerocket-settings-models-v0.2.0"
version = "0.2.0"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
generate-readme = { version = "0.1", path = "../../generate-readme" }
