[package]
name = "host-containers"
version = "0.1.0"
authors = ["Tom Kirchner <tjk@amazon.com>", "Zac Mrowicki <mrowicki@amazon.com>"]
license = "Apache-2.0 OR MIT"
edition = "2021"
publish = false
build = "build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[dependencies]
base64.workspace = true
constants.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
simplelog.workspace = true
snafu.workspace = true
toml.workspace = true
bottlerocket-modeled-types.workspace = true

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
generate-readme.workspace = true
