[package]
name = "pluto"
version = "0.1.0"
authors = ["Michael Patraw <patraw@amazon.com>"]
license = "(Apache-2.0 OR MIT) AND MIT"
edition = "2021"
publish = false
build = "build.rs"
# Don't rebuild crate just because of changes to README.
exclude = ["README.md"]

[features]
fips = ["aws-lc-rs/fips", "aws-smithy-experimental/crypto-aws-lc-fips", "rustls/fips"]

[package.metadata.build-package]
source-groups = ["aws-smithy-experimental"]

[dependencies]
aws-config.workspace = true
aws-lc-rs = { workspace = true, features = ["bindgen"] }
aws-sdk-eks.workspace = true
aws-sdk-ec2.workspace = true
aws-smithy-experimental = {workspace = true, features = ["crypto-aws-lc"]}
aws-smithy-types.workspace = true
aws-types.workspace = true
bottlerocket-modeled-types.workspace = true
bottlerocket-settings-models.workspace = true
constants.workspace = true
headers.workspace = true
hyper = { workspace = true, features = ["default"] }
hyper-http-proxy.workspace = true
hyper-util = { workspace = true, features = ["client", "client-legacy", "tokio"] }
hyper-rustls = { workspace = true, features = ["http1","http2", "logging", "native-tokio", "tls12"] }
imdsclient.workspace = true
rustls.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-retry.workspace = true
url.workspace = true

[build-dependencies]
generate-readme.workspace = true

[dev-dependencies]
httptest.workspace = true
